# tooly

./: .env.example  README.md  demo_workflow.py  final_test.py  main.py  pyproject.toml  requirements.txt  test_integration.py  test_logging.py  tool_demo_20251206_164215.json
.github/: copilot-instructions.md
.github/instructions/: api-reference-index.instructions.md  api-reference-spoon_ai.instructions.md  cli-advanced-features.instructions.md  cli-basic-usage.instructions.md  cli-configuration.instructions.md  cli-installation.instructions.md  cli-troubleshooting.instructions.md  core-concepts-Short-term-memory.instructions.md  core-concepts-agents-detailed.instructions.md  core-concepts-agents.instructions.md  core-concepts-graph-system.instructions.md  core-concepts-llm-providers.instructions.md  core-concepts-long-term-memory.instructions.md  core-concepts-mcp-protocol.instructions.md  core-concepts-tools.instructions.md  core-concepts-x402-payments.instructions.md  examples-graph-crypto-analysis.instructions.md  examples-intent-graph-demo.instructions.md  examples-mcp-spoon-search-agent.instructions.md  examples-x402-react-agent.instructions.md  getting-started-configuration.instructions.md  (+22 more)
UI/: index.html  note.md  playground.html  playground.js  script.js  styles.css
logs/: tool_demo_20251206_205400.json  tool_demo_20251206_211301.json
spoonOS/: README.md  agent.py  config.json  examples.py  note.md  pyproject.toml
userAgent/: README.md  __init__.py  agent.py  config.py  formatter.py  note.md  requirements.txt  spoonos_integration.py  test_agent.py
